--- a/index.html
+++ b/index.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-  <!-- <div class="main">
-    <h2>Todo List</h2>
-    <input type="text" name="" id="">
-    <button>Add Todo</button>
-    <div class="list">
-      <li>apple</li>
-      <button>Delete</button>  
-    </div>
-  </div> -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+  
+    <h1>Todo List</h1>
+    <br />
+    <form>
+      <div>
+        <input type="text" id="inputValue" />
+        <button class="btn">Add Todo</button>
+      </div>
+      <section class="todo-list-elem"></section>
+    </form>
 
-  <h1>Todo List</h1>
-  <br />
-  <form>
-    <div>
-      <input type="text" id="inputValue" />
-      <button class="btn">Add Todo</button>
-    </div>
-    <section class="todo-list-elem"></section>
-  </form>
-    
-
-    
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
+
